# pyusb

./: .gitignore  CMakeLists.txt  build_metadata.py  mb_version  pyusb.pth.in  setup.py
usb/: __init__.py  core.py
usb/backend/: libusb1.py
